--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
     "react-spotify-embed": "^0.2.3",
     "remix": "^1.1.3",
     "tiny-invariant": "^1.2.0"
