--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.8.1",
     "@chakra-ui/theme": "^1.13.0",
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@netlify/functions": "^0.10.0",
     "@remix-run/netlify": "^1.1.3",
