--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.8.1",
     "@chakra-ui/theme": "^1.13.0",
+    "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
@@ -22,6 +23,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-prismic": "^1.0.9",
+    "dayjs": "^1.10.7",
     "framer-motion": "^5.6.0",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
