--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "graphql-tag": "^2.12.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-instantsearch-dom": "^6.22.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-spotify-embed": "^0.2.3",
@@ -39,8 +40,10 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "typescript": "^4.1.2",
-    "cross-env": "^7.0.3"
+    "@types/react-instantsearch-dom": "^6.12.2",
+    "algoliasearch": "^4.12.1",
+    "cross-env": "^7.0.3",
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
